added section 2 navigation, product card border display, section 1 input field now restricted to 6 digits and more narrow input field - 17/10/2025

--- a/Part A/css/styles.css
+++ b/Part A/css/styles.css
@@ -48,8 +48,7 @@ body {
   border: 5px solid #b9dcff;
 }
 
-body {
-  background-image: url("../img/bg-img.png");
-  background-attachment: fixed;
-  background-position: center;
+.card-body {
+  border: 2px solid black;
+  border-radius: 5px;
 }
