changed css styling on section 1 to fit with rest of site, section1 script name change, section 1 visual changes - 18/10/2025

--- a/Part A/css/styles.css
+++ b/Part A/css/styles.css
@@ -34,18 +34,11 @@ body {
   transform: scale(1.03);
 }
 
-.index_body {
+.page_body {
   background-color: #c2d3de;
   border-radius: 5px;
   border: 5px solid #b9dcff;
   padding: 2rem;
-}
-
-.products_col,
-.products_search {
-  background-color: #c2d3de;
-  border-radius: 5px;
-  border: 5px solid #b9dcff;
 }
 
 .card-body {
